manifests/database/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: amex-database
  namespace: amex
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: amex-database

  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: amex-backend
      toPorts:
        - ports:
            - protocol: TCP
              port: '5432'

    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: cnpg-system
            app.kubernetes.io/name: cloudnative-pg
      toPorts:
        - ports:
            - port: '5432'
              protocol: TCP
            - port: '8000'
              protocol: TCP

    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: '9187'
              protocol: TCP

  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: '53'
              protocol: ANY
          rules:
            dns:
              - matchPattern: '*'

    - toEntities:
        - kube-apiserver
